# Personal

./: ExtremeHighGainFrictionObserver.cpp  JointExtremeHighGainFrictionObserver.cpp  TaskExtremeHighGainFrictionObserver.cpp  propagation.mlx
ExtremeHighGainFrictionObserver/: CMakeLists.txt  ExtremeHighGainFrictionObserver.cpp  ExtremeHighGainFrictionObserver.h
Hanyang/: nuri_control.py  panda.py  pdcontrol.py
Hanyang/Cartpole/: dqn_agent.py  dqn_model.py  main_train_cartpole.py
Hanyang/Panda/: env.py
Hanyang/RL/: panda.py
Hanyang/RL/my_models/: bottle.urdf
Hanyang/control_panda/: README.md  get_grasp_pose_using_ik.py  pnp.py
Hanyang/control_panda/src/: PID.py
Hanyang/model/franka_emika_panda/: mjx_panda.xml
Hanyang/model/kinova/gen3/: kinova_gen3_arm.xml  kinova_gen3_arm_rigid.xml
Hanyang/model/kinova/other/environment/: environment_body.xml
Hanyang/model/nuri_4s/: Nuri4s_0.stl  nuri_4s.xml  scene_nuri.xml
JointExtremeHighGainFrictionObserver/: JointExtremeHighGainFrictionObserver.cpp  README.md
Kinova/IRSL/Mujoco-1dof-main/: .gitignore  CMakeLists.txt  README.md  package.xml
Kinova/IRSL/Mujoco-1dof-main/include/Controller/: Controller.hpp  ControllerNode.hpp
Kinova/IRSL/Mujoco-1dof-main/include/Dynamics/: Dynamics.hpp
Kinova/IRSL/Mujoco-1dof-main/include/data/: CommonOperation.hpp  ObjectState.hpp  RobotState.hpp
Kinova/IRSL/Mujoco-1dof-main/include/mujoco-2.3.1/simulate/: simulate.cc  simulate.h
Kinova/IRSL/Mujoco-1dof-main/model/1dof/mujoco_model/: one_dof_arm.xml
Kinova/IRSL/Mujoco-1dof-main/model/1dof/mujoco_model/meshes/collision/: coupling.stl  shaft.stl  torque_sensor.stl
Kinova/IRSL/Mujoco-1dof-main/model/1dof/mujoco_model/meshes/visual/: core_shaft.stl  robot_arm.stl  shaft_torquesensor.stl  torquesensor_pb2.stl
Kinova/IRSL/Mujoco-1dof-main/model/kinova/mujoco_model/: kinova_gen3.xml
Kinova/IRSL/Mujoco-1dof-main/model/kinova/mujoco_model/other/environment/: environment_actuation.xml
Kinova/IRSL/Mujoco-1dof-main/src/: main.cpp
Kinova/IRSL/Mujoco-1dof-main/src/Controller/: Controller.cpp  ControllerNode.cpp
Kinova/IRSL/Mujoco-1dof-main/src/Dynamics/: Dynamics.cpp
Kinova/IRSL/devel/lib/mujoco_1dof/: simulate_1dof
Kinova/IRSL/devel/lib/pkgconfig/: mujoco_1dof.pc
Kinova/IRSL/devel/share/mujoco_1dof/cmake/: mujoco_1dofConfig.cmake
Mujoco/: Helloworld  opencv.py  panda.py  run.py
Mujoco/Helloworld.dSYM/Contents/Resources/DWARF/: Helloworld
Mujoco/Nuri/: pd_controller.py  run.py
Mujoco/Nuri/Control/: pd_controller.py  run.py
Mujoco/Nuri/RL_examples/: learning.py  test_agent.py
Mujoco/humanoid/: PPO.py  humanoid.py
Mujoco/model/franka_emika_panda/: mjx_panda.xml
Mujoco/model/nuri_4s/: Nuri4s_1.stl  Nuri4s_3.stl  Nuri4s_4.stl  Nuri4s_5.stl  Nuri4s_6.stl  nuri_4s.urdf  nuri_4s.xml
Nuri/Real/Data_Files/: Nuri_pole.SLDPRT
Nuri/Real/JointExtremeHighGainFrictionObserver/: JointExtremeHighGainFrictionObserver.cpp  JointExtremeHighGainFrictionObserver.h  UDP_client.hpp  UDP_server.hpp
Nuri/Real/PDFOvsL1AFO/TaskExtremeHighGainFrictionObserver/: TaskExtremeHighGainFrictionObserver.cpp  TaskExtremeHighGainFrictionObserver.h
Nuri/Real/PDFOvsL1AFO/TaskPDFrictionObserver/: TaskPDFrictionObserver.cpp  TaskPDFrictionObserver.h
Nuri/Real/PluginComponents/CustomAdmittanceJointController/: CMakeLists.txt  CustomAdmittanceJointController.cpp  CustomAdmittanceJointController.h
Nuri/Real/PluginComponents/CustomAdmittanceTaskController/: CMakeLists.txt  CustomAdmittanceTaskController.cpp  CustomAdmittanceTaskController.h
Nuri/Real/PluginComponents/CustomComputedTorqueJointController/: CMakeLists.txt  CustomComputedTorqueJointController.cpp  CustomComputedTorqueJointController.h
Nuri/Real/PluginComponents/CustomFrictionObserverJointController/: CMakeLists.txt  CustomFrictionObserverJointController.cpp  CustomFrictionObserverJointController.h
Nuri/Real/PluginComponents/CustomHinfJointController/: CMakeLists.txt  CustomHinfJointController.cpp  CustomHinfJointController.h
Nuri/Real/PluginComponents/CustomHinfTaskController/: CMakeLists.txt  CustomHinfTaskController.cpp  CustomHinfTaskController.h  README.md
Nuri/Real/PluginComponents/CustomImpedanceJointController/: CMakeLists.txt  CustomImpedanceJointController.cpp  CustomImpedanceJointController.h  README.md
Nuri/Real/PluginComponents/CustomImpedanceTaskController/: CMakeLists.txt  CustomImpedanceTaskController.cpp  CustomImpedanceTaskController.h  README.md
Nuri/Real/PluginComponents/CustomPdJointController/: CMakeLists.txt  CustomPdJointController.cpp  CustomPdJointController.h  README.md
Nuri/Real/PluginComponents/DemoExtremeHighGainFrictionObserver/: DemoExtremeHighGainFrictionObserver.cpp  DemoExtremeHighGainFrictionObserver.h
Nuri/Real/PluginComponents/JointExtremeHighGainFrictionObserver/: JointExtremeHighGainFrictionObserver.cpp
Nuri/Real/PluginComponents/JointPDFrictionObserver/: JointPDFrictionObserver.cpp
Nuri/Real/PluginComponents/TaskExtremeHighGainFrictionObserver/: TaskExtremeHighGainFrictionObserver.cpp
Nuri/Real/PluginComponents/TaskPDFrictionObserver/: TaskPDFrictionObserver.cpp
Nuri/Real/TaskExtremeHighGainFrictionObserver/: TaskExtremeHighGainFrictionObserver.cpp
Nuri/Real/TaskPDFrictionObserver/: TaskPDFrictionObserver.cpp  TaskPDFrictionObserver.h
Nuri/Simulation/mujoco-3.2.0/: CMakeLists.txt
Nuri/Simulation/mujoco-3.2.0/include/: Controller.cpp  Controller.hpp
Nuri/Simulation/mujoco-3.2.0/model/nuri_4s/: Nuri4s_2.stl  nuri_4s.xml
Nuri/Simulation/mujoco-3.2.0/mujoco.framework/Versions/A/: mujoco.tbd
Nuri/Simulation/mujoco-3.2.0/mujoco.framework/Versions/A/Resources/: Info.plist
Nuri/Simulation/mujoco-3.2.0/mujoco.framework/Versions/A/_CodeSignature/: CodeDirectory  CodeRequirements-1  CodeResources  CodeSignature
Nuri/Simulation/mujoco-3.2.0/simulate/: main.cc
ongoing/JointExtremeHighGainFrictionObserver/: JointExtremeHighGainFrictionObserver.cpp  JointExtremeHighGainFrictionObserver.h
ongoing/TaskExtremeHighGainFrictionObserver/: TaskExtremeHighGainFrictionObserver.cpp  TaskExtremeHighGainFrictionObserver.h
(+1 files in other folders)
